Fix alignment

--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -18,6 +18,7 @@ div#map {
 }
 
 .map-cell {
+  display: inline-block;
   width: 50px;
   height: 50px;
   text-align: center;
